Fixed scrolling and overflow-y issues on cat-list

--- a/client/src/app/cat-list/cat-list.component.css
+++ b/client/src/app/cat-list/cat-list.component.css
@@ -1,65 +1,19 @@
-/* .container {
-  width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
-  height: 100%;
-  overflow-y: auto;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
-}
-
-.search-form {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  width: 50vw;
-  max-width: 50vw;
-}
-
-.search-button {
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.full-width {
-  width: 95%;
-  margin-right: auto;
-  padding: 10px;
-  font-size: 1.5em;
-}
-
-.cat-item {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  border: 1px solid #ddd;
-  padding: 10px;
-  margin-bottom: 20px;
-  grid-column: span 2;
-}
-
-.cat-image {
-  object-fit: cover;
-  width: 100%;
-  height: 300px;
-}
-
-.cat-info {
-  text-align: left;
-} */
 
 .container {
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
+  height: calc(100vh - 40px);
+}
+
+.cat-list {
   overflow-y: auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 10px;
+  max-height: calc(100vh - 160px);
 }
+
 
 .search-form {
   display: flex;
