--- a/client/src/app/cat-map/cat-map.component.css
+++ b/client/src/app/cat-map/cat-map.component.css
@@ -7,6 +7,10 @@
 } */
 
 .map-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
